# wrest

./: .gitattributes  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  _typos.toml  build.rs  codecov.yml
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/start-httpbin/: action.yml
.github/ci-tools/: go.mod  go.sum
.github/workflows/: ci.yml  release.yml
docs/: http3.md  parity-gaps.md  reqwest-parity.md  url-standards.md
examples/: concurrent.rs  github_api.rs  hn_live.rs  json_crud.rs  simple_get.rs  streaming.rs  whirl.rs
src/: body.rs  callback.rs  client.rs  encoding.rs  error.rs  lib.rs  proxy.rs  redact.rs  redirect.rs  request.rs  response.rs  retry.rs  runtime.rs  threadpool.rs  timer.rs  tracing.rs  url.rs  util.rs  winhttp.rs
src/abi/: encoding.rs  mod.rs  winhttp.rs
tests/: integration.rs  real_world.rs  url_parse.rs
