[package]
name = "wrest"
version = "0.5.3"
edition = "2024"
rust-version = "1.90"
description = "Async HTTP client for Windows backed by WinHTTP, with a reqwest-compatible API"
authors = ["Eugene Talagrand"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["http", "request", "client", "windows"]
categories = ["web-programming::http-client"]
repository = "https://github.com/talagrand/wrest"
exclude = ["docs/http3.md", ".github/"]

# build.rs emits `native_winhttp` when on Windows without `always-reqwest`.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(native_winhttp)"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
features = ["__all-native-features"]

[lints.clippy]
unwrap_used = "warn"
uninlined_format_args = "warn"
unnecessary_to_owned = "warn"
manual_assert = "warn"
allow_attributes = "warn"
redundant_clone = "warn"
# in nursery
index_refutable_slice = "warn"
clone_on_ref_ptr = "warn"
# indexing_slicing = "warn"
# string_slice = "warn"
enum_glob_use = "warn"
implicit_clone = "warn"
expl_impl_clone_on_copy = "warn"

[features]
default = ["default-tls", "charset", "http2", "system-proxy"]

# -- reqwest-compatible capability features (no-op on native) ------

## Improved support for decoding text.
##
## wrest natively supports all 39 WHATWG encodings via Win32
## `MultiByteToWideChar` (plus ICU and a lookup table for edge cases),
## so this feature is a no-op on the native backend.  On the reqwest
## backend it forwards to `reqwest/charset`.
charset     = ["reqwest?/charset"]

## Enables HTTP/2 support.
##
## WinHTTP negotiates HTTP/2 via ALPN automatically (Windows 10 1607+),
## so this feature is a no-op on the native backend.  On the reqwest
## backend it forwards to `reqwest/http2`.
http2       = ["reqwest?/http2"]

## Provides TLS support to connect over HTTPS.
##
## WinHTTP always uses the OS TLS stack (SChannel), so this feature
## is a no-op on the native backend.  On the reqwest backend it
## forwards to `reqwest/default-tls`.
default-tls = ["reqwest?/default-tls"]

## Use the OS-native TLS stack (SChannel on Windows).
##
## This is always the case for wrest's native backend, so the feature
## just makes the default explicit.  On the reqwest backend it
## forwards to `reqwest/native-tls`.
native-tls  = ["reqwest?/native-tls"]

## Automatic system proxy detection.
##
## WinHTTP uses `WINHTTP_ACCESS_TYPE_AUTOMATIC_PROXY` (WPAD/PAC +
## system settings) by default, so this feature is a no-op on the
## native backend.  On the reqwest backend it forwards to
## `reqwest/system-proxy`.
system-proxy = ["reqwest?/system-proxy"]

# -- Serialization features (real implementation on both backends) ---

## Enables `RequestBuilder::json()` and `Response::json()`.
json  = ["dep:serde", "dep:serde_json",                    "reqwest?/json"]

## Enables `RequestBuilder::form()`.
form  = ["dep:serde", "dep:serde_json", "dep:form_urlencoded", "reqwest?/form"]

## Enables `RequestBuilder::query()`.
query = ["dep:serde", "dep:serde_json", "dep:form_urlencoded", "reqwest?/query"]

# -- Decompression toggles (no-op on native, forwarded to reqwest) --

## Enables `ClientBuilder::gzip()` and automatic gzip decompression.
##
## WinHTTP always decompresses gzip automatically, so the builder
## method is a no-op on the native backend (requires `noop-compat`
## to expose).  On the reqwest backend this forwards to
## `reqwest/gzip`.
gzip    = ["reqwest?/gzip"]

## Enables `ClientBuilder::deflate()` and automatic deflate decompression.
##
## WinHTTP always decompresses deflate automatically, so the builder
## method is a no-op on the native backend (requires `noop-compat`
## to expose).  On the reqwest backend this forwards to
## `reqwest/deflate`.
deflate = ["reqwest?/deflate"]

## Enables `ClientBuilder::brotli()` and automatic brotli decompression.
##
## WinHTTP does not decompress brotli natively, so the builder method
## is a no-op on the native backend (requires `noop-compat` to
## expose).  On the reqwest backend this forwards to
## `reqwest/brotli`.
brotli  = ["reqwest?/brotli"]

## Enables `ClientBuilder::zstd()` and automatic zstd decompression.
##
## WinHTTP does not decompress zstd natively, so the builder method
## is a no-op on the native backend (requires `noop-compat` to
## expose).  On the reqwest backend this forwards to
## `reqwest/zstd`.
zstd    = ["reqwest?/zstd"]

# -- Streaming ------------------------------------------------------

## Enables `Stream`-based request/response body support.
##
## wrest always supports streaming internally, so this feature is a
## no-op on the native backend.  On the reqwest backend it forwards
## to `reqwest/stream`.
stream  = ["reqwest?/stream"]

# -- Diagnostics & compatibility ------------------------------------

## Enables diagnostic logging via the [`tracing`](https://docs.rs/tracing) crate.
##
## When enabled, wrest emits `trace!`-level events for WinHTTP
## connection callbacks (DNS, connect, redirect, bytes sent/received)
## and `warn!`/`debug!` for internal edge cases.  Without a
## `tracing` subscriber these are zero-cost no-ops.
tracing          = ["dep:tracing"]

## Enables no-op reqwest compatibility stubs.
##
## When enabled, wrest exposes methods like
## `ClientBuilder::tcp_nodelay()`, `pool_idle_timeout()`,
## `http2_prior_knowledge()`, etc. that accept and ignore their
## arguments.  This lets code written against reqwest compile without
## changes.  Disable this feature if you prefer compile-time detection
## of unsupported API usage.
##
## Decompression toggles (`gzip()`, `deflate()`, `brotli()`, `zstd()`)
## require both this feature *and* the corresponding decompression
## feature (e.g. `features = ["noop-compat", "gzip"]`).
noop-compat      = []

## Enables `Client::new()` and `impl Default for Client`, which panic on
## failure.  Disabled by default -- prefer `Client::builder().build()` for
## fallible construction.  Provided for reqwest API compatibility.
panicking-compat = []

# -- Meta ------------------------------------------------------------

## Activates every user-facing feature *except* `always-reqwest`.
##
## Convenient for CI, docs.rs, and downstream crates that want
## full coverage without accidentally disabling the native WinHTTP backend.
## Double-underscore prefix marks it as an internal implementation detail.
__all-native-features = [
    "charset", "http2", "default-tls", "native-tls", "system-proxy",
    "json", "form", "query", "tracing",
    "panicking-compat", "noop-compat",
    "gzip", "deflate", "brotli", "zstd",
    "stream",
]

# -- Backend selection ----------------------------------------------

## Forces the reqwest backend even on Windows.  Useful for A/B testing
## wrest's native WinHTTP backend against reqwest.
always-reqwest   = ["dep:reqwest", "dep:tokio"]

[dependencies]
futures-core = "0.3.31"
serde = { version = "1.0.210", optional = true }
serde_json = { version = "1.0.128", optional = true }
form_urlencoded = { version = "1.2.2", optional = true }
tracing = { version = "0.1.40", default-features = false, features = ["std"], optional = true }
http = "1.1"
bytes = "1.11.1"
reqwest = { version = "0.13", optional = true, default-features = false }
tokio = { version = "1.44.2", optional = true, default-features = false, features = ["rt"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = ">=0.59, <0.62", default-features = false, features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Networking_WinHttp",
    "Win32_System_LibraryLoader",
] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
futures-timer = "3"
futures-executor = "0.3.31"
base64 = "0.22"

# On non-Windows platforms, reqwest is always used as the HTTP backend.
[target.'cfg(not(windows))'.dependencies]
reqwest = { version = "0.13", default-features = false }
tokio = { version = "1.44.2", default-features = false, features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
futures-util = "0.3.31"
futures-timer = "3"

[[example]]
name = "simple_get"
required-features = ["json"]
doc-scrape-examples = true

[[example]]
name = "json_crud"
required-features = ["json"]
doc-scrape-examples = true

[[example]]
name = "concurrent"
required-features = ["json", "query"]
doc-scrape-examples = true

[[example]]
name = "github_api"
required-features = ["json", "query"]
doc-scrape-examples = true

[[example]]
name = "hn_live"
required-features = ["json"]
doc-scrape-examples = true

[[example]]
name = "streaming"
doc-scrape-examples = true

